add food catalog controller
